fixes extra padding at the bottom of table for pool form

--- a/code/front/src/admin/pools/adminPools.less
+++ b/code/front/src/admin/pools/adminPools.less
@@ -31,11 +31,14 @@
 	}
 
 	tr {
-		/* padding-bottom: 50px; */
 
 		&:last-child {
 			textarea, label, input {
 				margin-bottom: 0;
+			}
+
+			td {
+				padding-bottom: 0;
 			}
 		}
 	}
